--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         var longitude = parseFloat(document.getElementById('longitude').value);
 
         // Set new map center
-        my_map.setView([latitude, longitude], 12);
+        map_html.setView([latitude, longitude], 12);
     }
 </script>
 
