--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,49 @@ header {
     align-items: center;
 }
 
+header .logo-container {
+    position: relative;
+    display: inline-block;
+}
+
 header .logo {
     width: 50px;
     height: 50px;
     margin-right: 15px;
     cursor: pointer;
+}
+
+header .logo-help {
+    visibility: hidden;
+    width: 200px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: 60px;
+    left: 50%;
+    margin-left: -100px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+header .logo-help::after {
+    content: "";
+    position: absolute;
+    top: -5px;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+header .logo-container:hover .logo-help {
+    visibility: visible;
+    opacity: 1;
 }
 
 body {
