--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ header h1 {
     margin: 0;
 }
 
-.github-logo {
+.header-right .github-logo {
     width: 32px;
     height: 32px;
     cursor: pointer;
@@ -75,20 +75,21 @@ header h1 {
 }
 
 /* Toggle switch styles */
-.switch {
+.header-right .switch {
     display: inline-block;
     width: 60px;
     height: 34px;
-    margin-left: 20px; /* Adds space between the GitHub logo and the switch */
+    position: relative;
+    margin-left: 20px; /* Adds space on left side of switch */
 }
 
-.switch input {
+.header-right .switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
-.slider {
+.header-right .slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -100,7 +101,7 @@ header h1 {
     border-radius: 34px;
 }
 
-.slider:before {
+.header-right .slider:before {
     position: absolute;
     content: "";
     height: 26px;
