--- a/styles.css
+++ b/styles.css
@@ -225,17 +225,21 @@ input, button {
     width: auto;
     padding: 10px;
 }
+#myChart-container {
+    width: 100%; /* Assure que le conteneur parent prend toute la largeur */
+    height: auto;
+    padding: 10px;
+}
 
 #myChart {
     width: 100%;
     height: auto;
     min-height: 200px;
-    min-width: 600px;
     margin: 0 auto; /* Centre le graphique */
 }
 
 /* Styles pour petits écrans */
-@media (min-width: 600px) {
+@media (min-width: 200px) {
     #myChart {
         min-width: 100%;
     }
