--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #ffffff;
     color: #000000; 
-    /* overflow-x: hidden;*/
+    overflow-x: hidden;
 }
 
 body.dark-mode {
