--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ body {
     background-color: var(--light-bg-color);
     color: var(--light-text-color);
     overflow-x: hidden;
+    width: calc(100% - 10px);
+    margin: 5px;
 }
 
 body.dark-mode {
@@ -24,11 +26,9 @@ body.dark-mode {
 
 /* Header styles */
 .sticky-header {
-    position: -webkit-sticky; /* Pour les anciens navigateurs Safari */
     position: sticky;
     top: 0;
     z-index: 1000;
-    background-color: var(--light-bg-color); /* Couleur de fond du header */
     box-shadow: 0 2px 5px #0c1116b4; /* Optionnel : ajout d'une ombre pour un effet visuel */
     padding: 10px 20px;
     display: flex;
@@ -62,8 +62,8 @@ body.dark-mode .sticky-header {
 }
 
 .header-left .header-logo {
-    width: 50px;
-    height: 50px;
+    max-width: 50px;
+    max-height: 50px;
     cursor: pointer;
 }
 
@@ -72,14 +72,13 @@ body.dark-mode .sticky-header {
 .header-right .logo-help,
 .header-right .switch-help {
     visibility: hidden;
-    width: 200px;
-    background-color: var(--secondary-color);
+    max-width: 200px;
     color: #ffffff;
     text-align: center;
     border-radius: 6px;
     padding: 5px 0;
     position: absolute;
-    z-index: 1;
+    z-index: 10;
     opacity: 0;
     transition: opacity 0.3s;
 }
@@ -105,14 +104,15 @@ body.dark-mode .sticky-header {
 }
 
 header h1 {
-    flex-grow: 1;
+    flex-grow: 0.5;
     text-align: center;
     margin: 0;
+    font-size: 3vw;
 }
 
 .header-right .github-logo {
-    width: 32px;
-    height: 32px;
+    max-width: 32px;
+    max-height: 32px;
     cursor: pointer;
 }
 
@@ -122,7 +122,7 @@ header h1 {
     width: 60px;
     height: 34px;
     position: relative;
-    margin-left: 20px; /* Adds space on left side of switch */
+    margin-left: 10px; /* Adds space on left side of switch */
 }
 
 .header-right .switch input {
@@ -164,9 +164,9 @@ input:checked + .slider:before {
 }
 
 .container {
-    max-width: 800px;
+    width: calc(100% - 10px);
     margin: auto;
-    padding: 20px;
+    padding: 5px;
     border: 1px solid #ccc;
     border-radius: 10px;
 }
@@ -258,8 +258,8 @@ body.dark-mode .help-text {
 
 #myChart {
     width: 100%;
+    min-height: 250px;
     height: auto;
-    min-height: 200px;
     margin: 0 auto; /* Centre le graphique */
 }
 
@@ -311,7 +311,7 @@ body.dark-mode .welcome-message {
 }
 
 #language-select {
-    margin-left: 20px;
+    margin-left: 10px;
     padding: 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
