no more .switch-help; added a few details of form steps

--- a/styles.css
+++ b/styles.css
@@ -42,16 +42,12 @@ body.dark-mode .sticky-header {
 }
 
 .header-left, .header-right {
+    flex: 1;
     display: flex;
     align-items: center;
 }
 
-.header-left {
-    flex: 1;
-}
-
 .header-right {
-    flex: 1;
     justify-content: flex-end;
 }
 
@@ -69,8 +65,7 @@ body.dark-mode .sticky-header {
 
 /* Help logo and switch styles */
 .header-left .logo-help,
-.header-right .logo-help,
-.header-right .switch-help {
+.header-right .logo-help {
     visibility: hidden;
     max-width: 200px;
     color: #ffffff;
@@ -84,8 +79,7 @@ body.dark-mode .sticky-header {
 }
 
 .header-left .logo-help::after,
-.header-right .logo-help::after,
-.header-right .switch-help::after {
+.header-right .logo-help::after {
     content: "";
     position: absolute;
     top: -5px;
@@ -97,8 +91,7 @@ body.dark-mode .sticky-header {
 }
 
 .header-left .logo-container:hover .logo-help,
-.header-right .logo-container:hover .logo-help,
-.header-right .switch:hover .switch-help {
+.header-right .logo-container:hover .logo-help {
     visibility: visible;
     opacity: 1;
 }
